# llm-server

./: .env.example  .gitignore  README.md  curl_test  llama-server_help  pyproject.toml  requirements.txt  server.py
grammars/: chat_short_reasoning.gbnf  fsm_grammar.gbnf  only_ok.gbnf  structured_cot_short.gbnf  test.gbnf
llm_server/: __init__.py  admin_api.py  api.py  app.py  backend.py  command.py  config.py  logic.py  logs.py  models.py  openai_api.py  responses.py  settings_store.py
llm_server/web/: app.css  app.js  index.html
tests/: test_server.py
