[project]
name = "llm-server"
version = "0.1.0"
description = "FastAPI proxy and Web UI for llama.cpp llama-server"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "httpx>=0.27.0",
    "python-dotenv>=1.0.1",
    "uvicorn[standard]>=0.30.0",
]

[tool.uv]
package = false
